# IntelligenteHandlungsplanungUniUlm

./: .gitignore
Blatt1/: Blatt1_Lösung.md
Blatt2/: CMakeLists.txt  Lösung.md  bfs.cpp  goalTets.cpp  graphSearch  graphSearch.cpp  main.cpp  series.cpp
Blatt2/res/: bfs.in  bfs1.in  bfs2.in  goalTest  goalTest1  sample-Anwendbarkeit.2.in  series.in  series1.in  series2.in
Blatt3/: Blatt3.md  CMakeLists.txt  Operator.cpp  Operator.hpp  State.cpp  State.hpp  VariablePredicate.cpp  VariablePredicate.hpp  main.cpp  util.cpp  util.hpp
Blatt4/: Beweis_Partieller_Plan.md  CMakeLists.txt  astar.cpp  graph.cpp  main.cpp
Blatt4/res/: NegPred.txt  h_not_h_prime.txt  sample-Graph.1.in  simple.txt
